Final version of the project code

--- a/LogisticRegrssion.ipynb
+++ b/LogisticRegrssion.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import f1_score, precision_score, recall_score"
    ]
   },
   {
@@ -427,26 +429,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "correctly_classified_transaction = 0\n",
-    "lib_correctly_classified_transaction = 0\n",
+    "# #Calculate accuracy score\n",
     "\n",
-    "for count in range(np.size(y_pred)):\n",
-    "    if Y_test[count] == y_pred[count]:\n",
-    "        correctly_classified_transaction += 1\n",
-    "    \n",
-    "    if Y_test[count] == lib_y_pred[count]:\n",
-    "        lib_correctly_classified_transaction += 1\n",
-    "    \n",
-    "    count += 1"
+    "# def get_accuracy_score():\n",
+    "#     correctly_classified_transaction = 0\n",
+    "#     for count in range(np.size(y_pred)):\n",
+    "#         if Y_test[count] == y_pred[count]:\n",
+    "#             correctly_classified_transaction += 1\n",
+    "\n",
+    "#         count += 1\n",
+    "#     return (correctly_classified_transaction / count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluattion and Accuracy of both Logistic Regression Models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm = confusion_matrix(Y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[85294,     2],\n",
+       "       [  147,     0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TN = 0\n",
+    "TP = 85294\n",
+    "FP = 2\n",
+    "FN = 147"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(85294, 0, 2, 147)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TP, TN, FP, FN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9982561473731025"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculate the accuracy\n",
+    "acc = (TP + TN) / sum(map(sum, cm))\n",
+    "acc "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -459,15 +559,78 @@
     }
    ],
    "source": [
-    "print(f\"Accuracy for project model: {(correctly_classified_transaction / count) * 100}\")\n",
-    "print(f\"Accuracy for scikit model: {(lib_correctly_classified_transaction / count) * 100}\")"
+    "print(f\"Accuracy for project model: {acc * 100}\")\n",
+    "print(f\"Accuracy for scikit model: {accuracy_score(Y_test, lib_y_pred) * 100}\")"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Evaluate both Logistic Regression Models."
+    "# Calculate the values of the performance metrics\n",
+    "\n",
+    "my_precision_score = TP / (TP + FP)\n",
+    "my_recall_score = TP / (TP + FN)\n",
+    "my_f1_score = 2 * ((my_precision_score * my_recall_score) / (my_precision_score + my_recall_score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1-score for sklearn model: 68.84057971014494\n",
+      "F1-score for ptoject model: 99.912731276759\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"F1-score for sklearn model: {f1_score(Y_test, lib_y_pred) * 100}\")\n",
+    "print(f\"F1-score for ptoject model: {my_f1_score * 100}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision Score for sklearn model: 73.64341085271317\n",
+      "Precision Score for project model: 99.99765522416058\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Precision Score for sklearn model: {precision_score(Y_test, lib_y_pred) * 100}\")\n",
+    "print(f\"Precision Score for project model: {my_precision_score * 100}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall Score for sklearn model: 64.62585034013605\n",
+      "Recall Score for project model: 99.82795145187907\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Recall Score for sklearn model: {recall_score(Y_test, lib_y_pred) * 100}\")\n",
+    "print(f\"Recall Score for project model: {my_recall_score * 100}\")"
    ]
   },
   {
